--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,7 @@ button {
   color: var(--foreground);
   border: 1px solid var(--foreground);
   padding: 0.5rem 0.5rem;
+  cursor: pointer;
 }
 
 button:hover {
