--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,16 @@ button {
   cursor: pointer;
 }
 
+button:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+button:disabled:hover {
+  background: inherit;
+  color: inherit;
+}
+
 button:hover {
   background: var(--foreground);
   color: var(--background);
@@ -67,7 +77,7 @@ main {
   padding: 1rem 0;
 }
 
-form.vertical {
+.form.vertical {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -77,4 +87,5 @@ input {
   background: var(--background);
   border: 1px solid var(--foreground);
   padding: 0.5rem 1rem;
+  color: var(--foreground);
 }
