--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,13 @@ input {
   padding: 0.5rem 1rem;
   color: var(--foreground);
 }
+
+/* utilities */
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.ml-1 {
+  margin-left: 1rem;
+}
