--- a/src/app/components/Card/Card.module.css
+++ b/src/app/components/Card/Card.module.css
@@ -22,5 +22,10 @@
   &.disabled {
     opacity: 0.75;
     cursor: default;
+
+    &:hover {
+      background: inherit;
+      color: inherit;
+    }
   }
 }
