--- a/src/app/game/[id]/gamePage.module.css
+++ b/src/app/game/[id]/gamePage.module.css
@@ -24,10 +24,16 @@
   }
 }
 
-.numberCard,
+.voteCard,
 .playerCard {
-  min-width: 12rem;
-  min-height: 15rem;
+  min-width: 10rem;
+  min-height: 12rem;
+}
+
+.playerCard {
+  .cardContent {
+    font-size: 4rem;
+  }
 }
 
 .cardBodyAlt {
@@ -35,12 +41,12 @@
   align-content: center;
 }
 
-.numberCard {
+.voteCard {
   cursor: pointer;
 }
 
-.numberCard.selected,
-.numberCard:hover {
+.voteCard.selected,
+.voteCard:hover {
   background-color: var(--foreground);
   color: var(--background);
 }
@@ -48,7 +54,7 @@
 .cardContent {
   display: flex;
   justify-content: center;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .gameBoard {
