--- a/src/app/components/FacilitatorView/facilitatorView.module.css
+++ b/src/app/components/FacilitatorView/facilitatorView.module.css
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1rem;
+    margin: 1rem 0;
 
     & * {
       font-weight: 700;
@@ -52,7 +52,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 1rem;
 
     .gameStatus {
       text-align: right;
